Bug 223322 - KMail hangs when reading a message with a MDN request
Summary: KMail hangs when reading a message with a MDN request
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: MDN (other bugs)
Version First Reported In: 1.99.0
Platform: Compiled Sources Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-01-18 19:23 UTC by Christophe Marin
Modified: 2010-01-29 08:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2010-01-18 19:23:02 UTC
Version:           1.99 (using Devel)
Compiler:          GCC 4.5 
OS:                Linux
Installed from:    Compiled sources

SVN rev 1076653

KMail becomes unresponsive when displaying the MDN Request dialog ('Ignored'/'Send denied'/'Send')

Console output :

Object::connect: No such slot MDNAdviceDialog::slotButtonClicked( KDialog::ButtonCode ) in /kde/src/KDE/kdepim/kmail/mdnadvicedialog.cpp:41
Comment 1 Thomas McGuire 2010-01-22 20:26:04 UTC
SVN commit 1078746 by tmcguire:

Remove unneeded connection

CCBUG: 223322


 M  +0 -2      mdnadvicedialog.cpp  
 M  +2 -0      mdnadvicedialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1078746
Comment 2 Torgny Nyblom 2010-01-29 08:45:27 UTC
SVN commit 1081709 by tnyblom:

accept() all handled buttons.

BUG: 223322



 M  +1 -0      mdnadvicedialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1081709