accept() all handled buttons.

BUG: 223322


svn path=/trunk/KDE/kdepim/kmail/; revision=1081709